Added side bar elements and black pages with their headings

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,13 @@
         <script src="js/sb-admin-2.js"></script>
 
       <script src="scripts/controllers/upcoming-movies.js"></script>
+      <script src="scripts/controllers/user-accounts.js"></script>
+      <script src="scripts/controllers/site-config.js"></script>
+      <script src="scripts/controllers/screen-settings.js"></script>
+      <script src="scripts/controllers/ticket-settings.js"></script>
+      <script src="scripts/controllers/social-settings.js"></script>
+      <script src="scripts/controllers/location-settings.js"></script>
+      <script src="scripts/controllers/contact-settings.js"></script>
       <!-- endbuild -->
 
 
