--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/timeline.css">
     <link rel="stylesheet" href="styles/upcoming-movies.css">
     <link rel="stylesheet" href="styles/ticket-settings.css">
+    <link rel="stylesheet" href="styles/site-config.css">
     <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.min.css">
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
