--- a/app/scripts/directives/dashboard/stats/stats.html
+++ b/app/scripts/directives/dashboard/stats/stats.html
@@ -1,4 +1,4 @@
-<div class="col-lg-3 col-md-6">
+<div class="col-lg-4 col-md-6">
     <div class="panel panel-{{colour}}">
         <div class="panel-heading">
             <div class="row">
@@ -12,12 +12,12 @@
             </div>
         </div>
         <!-- <a ui-sref="{{goto}}"> -->
-        <a ui-sref="#">
-            <div class="panel-footer">
-                <span class="pull-left">View Details</span>
-                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                <div class="clearfix"></div>
-            </div>
-        </a>
+        <!--<a ui-sref="#">-->
+            <!--<div class="panel-footer">-->
+                <!--<span class="pull-left">View Details</span>-->
+                <!--<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>-->
+                <!--<div class="clearfix"></div>-->
+            <!--</div>-->
+        <!--</a>-->
     </div>
 </div>
