--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html class="no-js">
-  <head>
+<head>
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
@@ -8,8 +8,9 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet"
+          href="bower_components/angular-toastr/dist/angular-toastr.min.css"/>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -22,8 +23,10 @@
     <link rel="stylesheet" href="styles/site-config.css">
     <link rel="stylesheet" href="styles/user-accounts.css">
     <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.min.css">
-    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet"
+          href="bower_components/angular-loading-bar/build/loading-bar.min.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"
+          type="text/css">
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -42,32 +45,39 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.min.js"></script>
 
-      <!-- endbower -->
+    <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="js/sb-admin-2.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="js/sb-admin-2.js"></script>
+    <script src="config.js"></script>
 
-      <script src="scripts/controllers/upcoming-movies.js"></script>
-      <script src="scripts/controllers/user-accounts.js"></script>
-      <script src="scripts/controllers/site-config.js"></script>
-      <script src="scripts/controllers/screen-settings.js"></script>
-      <script src="scripts/controllers/ticket-settings.js"></script>
-      <script src="scripts/controllers/social-settings.js"></script>
-      <script src="scripts/controllers/location-settings.js"></script>
-      <script src="scripts/controllers/contact-settings.js"></script>
-      <!-- endbuild -->
-
+    <script src="scripts/controllers/upcoming-movies.js"></script>
+    <script src="scripts/controllers/user-accounts.js"></script>
+    <script src="scripts/controllers/site-config.js"></script>
+    <script src="scripts/controllers/screen-settings.js"></script>
+    <script src="scripts/controllers/ticket-settings.js"></script>
+    <script src="scripts/controllers/social-settings.js"></script>
+    <script src="scripts/controllers/location-settings.js"></script>
+    <script src="scripts/controllers/contact-settings.js"></script>
+    <!-- endbuild -->
 
 
     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-XXXXX-X');
+        ga('send', 'pageview');
     </script>
     <!-- Custom CSS -->
 
@@ -77,16 +87,16 @@
     <!-- <link href="styles/morrisjs/morris.css" rel="stylesheet"> -->
 
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-    <div ng-app="sbAdminApp">
+<div ng-app="sbAdminApp">
 
-        <div ui-view></div>
+    <div ui-view></div>
 
-    </div>
+</div>
 
-    </body>
+</body>
 
 </html>
